# erddap_client

./: .gitignore  README.md  pyproject.toml
environment/: jupyter-kernel.md
notebooks/10_noaa_facilitated_erddap/: glider_erddap_analysis.ipynb
notes/: erddap.md  noaa.md  tools.md
notes/project_ideas/: README.md
scripts/: README.md
src/erddap_client/: __init__.py  erddap_wrapper.py  glider_cache.py  mapping.py
