[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "erddap-client"
version = "0.1.0"
description = "Exploration notebooks and utilities for working with ERDDAP datasets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy",
    "erddapy",
    "ipykernel",
    "jupyterlab",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "pytest",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
